--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
-    
+
     <title>Maestria Elemental</title>
 </head>
 
@@ -31,23 +31,32 @@
             </nav>
         </header>
         <main class="me-main-map">
-            <div class="me-logo"><a href="./index.html"><img class="me-logo" alt="logo" src="../img/maestria_logo.svg"></a></div>
+            <div class="me-logo"><a href="./index.html"><img class="me-logo" alt="logo"
+                        src="../img/maestria_logo.svg"></a></div>
             <h1>Genshin Impact</h1>
-            <!--iframe class="me-mapa" src="https://webstatic-sea.mihoyo.com/app/ys-map-sea/index.html?bbs_presentation_style=no_header&lang=es-es#/map/2?shown_types="></iframe-->    
+            <!--iframe class="me-mapa" src="https://webstatic-sea.mihoyo.com/app/ys-map-sea/index.html?bbs_presentation_style=no_header&lang=es-es#/map/2?shown_types="></iframe-->
             <div class="me-iframe">
 
-            <iframe class="me-mapa" src="https://genshin-impact-map.appsample.com/#/"></iframe>    
-</div>
+                <iframe class="me-mapa" src="https://genshin-impact-map.appsample.com/#/"></iframe>
+            </div>
 
         </main>
         <nav class="me-sidebar">
-        <h4>Disponible en la siguientes plataformas<h4><br>
-            <ul class="me-stores">
-                <li><a href="https://www.apple.com/app-store/" target="_blank"><div class="side-item"><img src="../img/apple_logo_me.svg"></div></a></li>
-                <li><a href="https://store.playstation.com/en-us/" target="_blank"><div class="side-item"><img src="../img/ps_logo_me.svg"></div></a></li>
-                <li><a href="https://play.google.com/store/" target="_blank"><div class="side-item"><img src="../img/google_play_logo_me.svg"></div></a></li>
-                <li><a href="https://www.microsoft.com/es-ar/store/apps/windows/" target="_blank"><div class="side-item"><img src="../img/ms_logo_me.svg"></div></a></li>
-            </ul>
+            <h4>Disponible en la siguientes plataformas<h4><br>
+                    <ul class="me-stores">
+                        <li><a href="https://www.apple.com/app-store/" target="_blank">
+                                <div class="side-item"><img src="../img/apple_logo_me.svg"></div>
+                            </a></li>
+                        <li><a href="https://store.playstation.com/en-us/" target="_blank">
+                                <div class="side-item"><img src="../img/ps_logo_me.svg"></div>
+                            </a></li>
+                        <li><a href="https://play.google.com/store/" target="_blank">
+                                <div class="side-item"><img src="../img/google_play_logo_me.svg"></div>
+                            </a></li>
+                        <li><a href="https://www.microsoft.com/es-ar/store/apps/windows/" target="_blank">
+                                <div class="side-item"><img src="../img/ms_logo_me.svg"></div>
+                            </a></li>
+                    </ul>
         </nav>
         <aside class="me-widget">
             <ul class="me-redes-bar me-redes">
@@ -58,14 +67,15 @@
             </ul>
         </aside>
         <footer class="me-footer">
-            <p class="declaration">"PlayStation Family Mark," "PS5 logo" and "PS4 logo" are registered trademarks or
+            <div class="declaration">
+                <p>"PlayStation Family Mark," "PS5 logo" and "PS4 logo" are registered trademarks or
                 trademarks of Sony
-                Interactive Entertainment Inc.
-                Epic, Epic Games, Epic Games Store, the Epic Games Store logo, and Epic Online Services are trademarks
-                and/or registered trademarks of Epic Games. All other trademarks are the property of their respective
-                owners."
-            </p>
-            <p class="copyright">&copy; Copyright 2021 All Rights Reserved </p>
+                Interactive Entertainment Inc.</p>
+                <p>Epic, Epic Games, Epic Games Store, the Epic Games Store logo, and Epic Online Services are trademarks
+                and/or registered trademarks of Epic Games.</p><p>All other trademarks are the property of their respective
+                owners."</p>
+            </div>
+            <div class="copyright"><p>&copy; Copyright 2021 All Rights Reserved </p></div>
         </footer>
     </div>
 </body>
