--- a/pages/guias.html
+++ b/pages/guias.html
@@ -300,14 +300,15 @@ En combate cuerpo a cuerpo, al lanzar Caos: Obliteración, el TdE de Legado del 
             </ul>
         </aside>
         <footer class="me-footer">
-            <p class="declaration">"PlayStation Family Mark," "PS5 logo" and "PS4 logo" are registered trademarks or
+            <div class="declaration">
+                <p>"PlayStation Family Mark," "PS5 logo" and "PS4 logo" are registered trademarks or
                 trademarks of Sony
-                Interactive Entertainment Inc.
-                Epic, Epic Games, Epic Games Store, the Epic Games Store logo, and Epic Online Services are trademarks
-                and/or registered trademarks of Epic Games. All other trademarks are the property of their respective
-                owners."
-            </p>
-            <p class="copyright">&copy; Copyright 2021 All Rights Reserved </p>
+                Interactive Entertainment Inc.</p>
+                <p>Epic, Epic Games, Epic Games Store, the Epic Games Store logo, and Epic Online Services are trademarks
+                and/or registered trademarks of Epic Games.</p><p>All other trademarks are the property of their respective
+                owners."</p>
+            </div>
+            <div class="copyright"><p>&copy; Copyright 2021 All Rights Reserved </p></div>
         </footer>
     </div>
 </body>
