--- a/pages/registro.html
+++ b/pages/registro.html
@@ -77,14 +77,15 @@
             </ul>
         </aside>
         <footer class="me-footer">
-            <p class="declaration">"PlayStation Family Mark," "PS5 logo" and "PS4 logo" are registered trademarks or
+            <div class="declaration">
+                <p>"PlayStation Family Mark," "PS5 logo" and "PS4 logo" are registered trademarks or
                 trademarks of Sony
-                Interactive Entertainment Inc.
-                Epic, Epic Games, Epic Games Store, the Epic Games Store logo, and Epic Online Services are trademarks
-                and/or registered trademarks of Epic Games. All other trademarks are the property of their respective
-                owners."
-            </p>
-            <p class="copyright">&copy; Copyright 2021 All Rights Reserved </p>
+                Interactive Entertainment Inc.</p>
+                <p>Epic, Epic Games, Epic Games Store, the Epic Games Store logo, and Epic Online Services are trademarks
+                and/or registered trademarks of Epic Games.</p><p>All other trademarks are the property of their respective
+                owners."</p>
+            </div>
+            <div class="copyright"><p>&copy; Copyright 2021 All Rights Reserved </p></div>
         </footer>
     </div>
     <script type="text/javascript" src="../js/validacion.js"></script> 
