--- a/pages/guias.html
+++ b/pages/guias.html
@@ -30,7 +30,7 @@
             </nav>
         </header>
         <main class="me-main">
-            <div class="me-logo"><a href="./index.html"><img class="me-logo" alt="logo" src="../img/maestria_logo.svg"></a></div>
+            <div class="me-logo"><a href="./index.html"><img class="me-logo-img" alt="logo" src="../img/maestria_logo.svg"></a></div>
             <p>
 Somos Projekt Abyss, un grupo de bloggers y editores que estarán compartiendo guías de Genshin Impact mediante esta plataforma y Amino. Al ser varias personas colaborando, podemos ofrecer guías más completas a cambio de una menor inversión en tiempo. Si quieres saber más de nosotros, puedes checar nuestro perfil en Amino. Esperamos que nuestros blogs le puedan ser de utilidad a más de una persona, y si es así, considera seguirnos. ♡
 
