--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -30,7 +30,7 @@
             </nav>
         </header>
         <main class="me-main-map">
-            <div class="me-logo"><a href="./index.html"><img class="me-logo" alt="logo"
+            <div class="me-logo"><a href="./index.html"><img class="me-logo-img" alt="logo"
                         src="../img/maestria_logo.svg"></a></div>
             <h1>Genshin Impact</h1>
             <!--iframe class="me-mapa" src="https://webstatic-sea.mihoyo.com/app/ys-map-sea/index.html?bbs_presentation_style=no_header&lang=es-es#/map/2?shown_types="></iframe-->
