--- a/pages/registro.html
+++ b/pages/registro.html
@@ -33,7 +33,7 @@
             </nav>
         </header>
         <main class="me-main">
-            <div class="me-logo"><a href="../index.html"><img class="me-logo" alt="logo" src="../img/maestria_logo.svg"></a></div>
+            <div class="me-logo"><a href="../index.html"><img class="me-logo-img" alt="logo" src="../img/maestria_logo.svg"></a></div>
             <form id="formu-Registro">
       <h1>Registrate</h1>
   <div class="form-group">
