--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
     <link rel="stylesheet" href="/css/styles.css">
-    <!-- Iconos redes de fontawesome -->
+    <!-- Iconos redes sociales de fontawesome -->
     <script src="https://kit.fontawesome.com/59c8ee105d.js" crossorigin="anonymous"></script>
     <!-- Fuente Noto Sans JP de google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,12 +20,12 @@
 <body>
     <div class="me-container">
         <header class="me-header">
-                <ul class="me-menu">
-                    <li><a href="./index.html">Inicio</a></li>
-                    <li><a href="pages/mapa.html">Mapa Interactivo</a></li>
-                    <li><a href="pages/guias.html">Guias</a></li>
-                    <li><a href="pages/registro.html">Registro</a></li>
-                </ul>
+            <ul class="me-menu">
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="pages/mapa.html">Mapa Interactivo</a></li>
+                <li><a href="pages/guias.html">Guias</a></li>
+                <li><a href="pages/registro.html">Registro</a></li>
+            </ul>
         </header>
         <main class="me-main">
             <div class="video-container">
