--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <!-- Iconos redes de fontawesome -->
     <script src="https://kit.fontawesome.com/59c8ee105d.js" crossorigin="anonymous"></script>
     <!-- Fuente Noto Sans JP de google fonts -->
@@ -20,43 +20,26 @@
 <body>
     <div class="me-container">
         <header class="me-header">
-            <nav class="me-navbar">
-                <ul class="me-menu">
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="./mapa.html">Mapa Interactivo</a></li>
-                    <li><a href="./guias.html">Guias</a></li>
-                    <li><a href="./registro.html">Registro</a></li>
-                </ul>
-            </nav>
+            <ul class="me-menu">
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="./mapa.html">Mapa Interactivo</a></li>
+                <li><a href="./guias.html">Guias</a></li>
+                <li><a href="./registro.html">Registro</a></li>
+            </ul>
         </header>
-        <main class="me-main-map">
-            <div class="me-logo"><a href="./index.html"><img class="me-logo-img" alt="logo"
-                        src="../img/maestria_logo.svg"></a></div>
-            <h1>Genshin Impact</h1>
-            <!--iframe class="me-mapa" src="https://webstatic-sea.mihoyo.com/app/ys-map-sea/index.html?bbs_presentation_style=no_header&lang=es-es#/map/2?shown_types="></iframe-->
+        <main class="me-main">
+            <div class="me-logo"><a href="../index.html" class="me-logo-img" alt="logo"
+                    src="../img/maestria_logo.svg"></a></div>
+            <h1 class="me-mapa-title">Mapa Interactivo de Genshin Impact</h1>
             <div class="me-iframe">
-
-                <iframe class="me-mapa" src="https://genshin-impact-map.appsample.com/#/"></iframe>
+                <iframe class="me-mapa"
+                    src="https://webstatic-sea.mihoyo.com/app/ys-map-sea/index.html?bbs_presentation_style=no_header&lang=es-es#/map/2?shown_types="></iframe>
             </div>
 
         </main>
-        <nav class="me-sidebar">
-            <h4>Disponible en la siguientes plataformas<h4><br>
-                    <ul class="me-stores">
-                        <li><a href="https://www.apple.com/app-store/" target="_blank">
-                                <div class="side-item"><img src="../img/apple_logo_me.svg"></div>
-                            </a></li>
-                        <li><a href="https://store.playstation.com/en-us/" target="_blank">
-                                <div class="side-item"><img src="../img/ps_logo_me.svg"></div>
-                            </a></li>
-                        <li><a href="https://play.google.com/store/" target="_blank">
-                                <div class="side-item"><img src="../img/google_play_logo_me.svg"></div>
-                            </a></li>
-                        <li><a href="https://www.microsoft.com/es-ar/store/apps/windows/" target="_blank">
-                                <div class="side-item"><img src="../img/ms_logo_me.svg"></div>
-                            </a></li>
-                    </ul>
-        </nav>
+        <div class="me-sidebar">
+            <div id="side-item-element"></div>
+        </div>
         <aside class="me-widget">
             <ul class="me-redes-bar me-redes">
                 <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
@@ -68,13 +51,17 @@
         <footer class="me-footer">
             <div class="declaration">
                 <p>"PlayStation Family Mark," "PS5 logo" and "PS4 logo" are registered trademarks or
-                trademarks of Sony
-                Interactive Entertainment Inc.</p>
-                <p>Epic, Epic Games, Epic Games Store, the Epic Games Store logo, and Epic Online Services are trademarks
-                and/or registered trademarks of Epic Games.</p><p>All other trademarks are the property of their respective
-                owners."</p>
+                    trademarks of Sony
+                    Interactive Entertainment Inc.</p>
+                <p>Epic, Epic Games, Epic Games Store, the Epic Games Store logo, and Epic Online Services are
+                    trademarks
+                    and/or registered trademarks of Epic Games.</p>
+                <p>All other trademarks are the property of their respective
+                    owners."</p>
             </div>
-            <div class="copyright"><p>&copy; Copyright 2021 All Rights Reserved </p></div>
+            <div class="copyright">
+                <p>&copy; Copyright 2021 All Rights Reserved </p>
+            </div>
         </footer>
     </div>
 </body>
