--- a/pages/guias.html
+++ b/pages/guias.html
@@ -24,165 +24,94 @@
                 <ul class="me-menu">
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="./mapa.html">Mapa Interactivo</a></li>
-                    <li><a href="/guias.html">Guias</a></li>
+                    <li><a href="./guias.html">Guias</a></li>
                     <li><a href="./registro.html">Registro</a></li>
                 </ul>
             </nav>
-            <div class="me-logo"><a href="./index.html"><img class="me-logo-img" alt="logo"
-                        src="../img/maestria_logo.svg"></a></div>
         </header>
         <main class="me-main">
+            <div class="me-article-container">
             <article class="me-article">
                 <p>
                     En esta primera ocasión les traemos una guía muy extensa sobre un personaje que (una vez más) llegó
-                    a todos los servidores del juego, Tartaglia.</p>
-
-                <p> A su vez, podría ser considerado uno de los personajes más infravalorados dentro del mismo, ya que
-                    hasta hace relativamente poco tiempo la gente se empezó a dar cuenta de su potencial.
-                    ¿Fuiste por él, y no estás seguro de cómo buildearlo? ¿O tuviste mala suerte y perdiste tu pity
-                    yendo por los 4* y ahora quieres sacarle provecho? Sea cual sea tu situación, te invitamos a checar
-                    nuestra guía, seguramente encontrarás información que te pueda ser de utilidad.
+                    a todos los servidores del juego, Tartaglia.
                 </p>
-            </article>
-            <article class="me-article">
                 <h1>Tartaglia</h1>
-                <img src="../img/portrait-tartaglia.jpg">
-
+                <figure class="me-figure">
+                <img class="me-portrait-logo" src="../img/portrait-tartaglia.jpg">
+                </figure>
                 <h2>El Undécimo Heraldo de los Fatuis</h2>
-
                 <ul>
-                    <li>Rareza: ✩✩✩✩✩</li>
-                    <li>Arma: Arco</li>
-                    <li>Elemento: Hydro</li>
+                    <li><strong>Rareza: </strong> ✩✩✩✩✩</li>
+                    <li><strong>Arma: </strong> Arco</li>
+                    <li><strong>Elemento: </strong>Hydro</li>
                 </ul>
 
-            <p>Dentro del meta actual, <strong>Tartaglia</strong> es un On-field DPS (es decir, un personaje que se encarga de realizar
-                mucho daño mientras está en el campo) que brilla por su gran aplicación de hydro en área que es
-                aprovechada por el resto de su team, funcionando como enabler hydro. Tomando en cuenta que el elemento
-                hydro está presente en la mayor parte de los teams meta en la actualidad, estas características lo
-                vuelven un muy buen personaje por el que vale totalmente la pena tirar. Sin embargo, debido a su estilo
-                de juego tan único cambiando entre dos armas, puede ser un personaje difícil de masterizar.</p>
+                <p>Dentro del meta actual, <strong>Tartaglia</strong> es un On-field DPS (es decir, un personaje que se
+                    encarga de realizar
+                    mucho daño mientras está en el campo) que brilla por su gran aplicación de hydro en área que es
+                    aprovechada por el resto de su team, funcionando como enabler hydro. Tomando en cuenta que el
+                    elemento
+                    hydro está presente en la mayor parte de los teams meta en la actualidad, estas características lo
+                    vuelven un muy buen personaje por el que vale totalmente la pena tirar. Sin embargo, debido a su
+                    estilo
+                    de juego tan único cambiando entre dos armas, puede ser un personaje difícil de masterizar.</p>
 
-            <p> A diferencia de Raiden Shogun, con Tartaglia tendremos que utilizar nuestra “segunda forma” el tiempo
-                que necesiten nuestros off-field DPS, sin excedernos mucho (max 15s) para no extender tanto el TdE de la
-                habilidad, es por esto que el brillo de Tartaglia se verá más presente en composiciones con personajes
-                que puedan realizar un alto daño estando fuera de campo (a como veremos más adelante).</p>
-<p>
-                Pese a ser un personaje de arco brilla más con su arma cuerpo a cuerpo. Gracias a que esta imbuye tanto
-                sus ataques normales como cargados en hydro, y junto con su pasiva “Obstrucción de flujo” se vuelve
-                excelente aplicando hydro en área, siendo esto lo que le da el título de enabler hydro. Ya que Tartaglia
-                aplica hydro muy rápido durante su forma melé, no es recomendable utilizarlo en composiciones donde se
-                pretenda que él haga las reacciones, dado que al poco tiempo aplicará el status de “Mojado” en sus
-                enemigos y serán sus soportes quienes realizarán las reacciones elementales.
-</p>
-<p>
-                Mientras, su habilidad definitiva lo vuelve un excelente nuker, ya que tiene unos escalados muy altos y
-                también aplica la marca que nos proporciona su habilidad elemental. Su daño es tan elevado que vale
-                totalmente la pena que, en una rotación, sea él quién vaporice utilizándola. Usarla en su forma rango
-                realizará mucho menos daño, pero nos otorgará algo de energía. Aún así, no vale la pena usarla de esta
-                forma.
-</p>
-            </article>
-            <article class="me-article">
-               <h3>˚₊· 𝑬𝒔𝒕𝒓𝒆𝒍𝒍𝒂 𝑰𝒏𝒗𝒆𝒓𝒏𝒂𝒍 ·₊˚</h3> 
-<img src="../img/estrella-invernal.jpg">
-               <p> El nuevo arco de 5* que vendrá en el banner de armas junto al banner de Tartaglia va a ser la mejor arma
-                para este personaje, al ser esta su Signature Weapon es de esperar que sea el arma que mejor le va. Sin
-                embargo, la diferencia no es tanta como cabría esperar, comparándola con otras armas, por lo que si
-                tienes alguna de las siguientes no es recomendable tirar por esta arma. Aun así, es su mejor opción
-                actualmente.</p>
-<p>
-                Esta arma nos sube el ataque al golpear o usar habilidades, por lo que todos sus daños se ven
-                aumentados, contando que el Riptide es un porcentaje bastante alto de su DPS total, este se ve también
-                beneficiado por al aumento de ataque, por tanto, nos da un mejor resultado en el DPS.
-</p>
-<h3>˚₊· 𝑨𝒈𝒊𝒕𝒂𝒅𝒐𝒓 𝒅𝒆𝒍 𝑹𝒆𝒍𝒂𝒎𝒑𝒂𝒈𝒐 ·₊˚</h3>
-
-                Esta arma es la segunda mejor opción para Tartaglia y no se queda muy atrás, es un arma originalmente
+                <p> A diferencia de Raiden Shogun, con Tartaglia tendremos que utilizar nuestra “segunda forma” el
+                    tiempo
+                    que necesiten nuestros off-field DPS, sin excedernos mucho (max 15s) para no extender tanto el TdE
+                    de la
+                    habilidad, es por esto que el brillo de Tartaglia se verá más presente en composiciones con
+                    personajes
+                    que puedan realizar un alto daño estando fuera de campo (a como veremos más adelante).</p>
+                <p>
+                    Pese a ser un personaje de arco brilla más con su arma cuerpo a cuerpo. Gracias a que esta imbuye
+                    tanto
+                    sus ataques normales como cargados en hydro, y junto con su pasiva “Obstrucción de flujo” se vuelve
+                    excelente aplicando hydro en área, siendo esto lo que le da el título de enabler hydro. Ya que
+                    Tartaglia
+                    aplica hydro muy rápido durante su forma melé, no es recomendable utilizarlo en composiciones donde
+                    se
+                    pretenda que él haga las reacciones, dado que al poco tiempo aplicará el status de “Mojado” en sus
+                    enemigos y serán sus soportes quienes realizarán las reacciones elementales.
+                </p>
+                <p>
+                    Mientras, su habilidad definitiva lo vuelve un excelente nuker, ya que tiene unos escalados muy
+                    altos y
+                    también aplica la marca que nos proporciona su habilidad elemental. Su daño es tan elevado que vale
+                    totalmente la pena que, en una rotación, sea él quién vaporice utilizándola. Usarla en su forma
+                    rango
+                    realizará mucho menos daño, pero nos otorgará algo de energía. Aún así, no vale la pena usarla de
+                    esta
+                    forma.
+                </p>
+                <h3>˚₊· 𝑬𝒔𝒕𝒓𝒆𝒍𝒍𝒂 𝑰𝒏𝒗𝒆𝒓𝒏𝒂𝒍 ·₊˚</h3>
+                <img class="me-arma-descr" src="../img/estrella-invernal.jpg">
+                <p> El nuevo arco de 5* que vendrá en el banner de armas junto al banner de Tartaglia va a ser la mejor
+                    arma
+                    para este personaje, al ser esta su Signature Weapon es de esperar que sea el arma que mejor le va.
+                    Sin
+                    embargo, la diferencia no es tanta como cabría esperar, comparándola con otras armas, por lo que si
+                    tienes alguna de las siguientes no es recomendable tirar por esta arma. Aun así, es su mejor opción
+                    actualmente.</p>
+                <p>
+                    Esta arma nos sube el ataque al golpear o usar habilidades, por lo que todos sus daños se ven
+                    aumentados, contando que el Riptide es un porcentaje bastante alto de su DPS total, este se ve
+                    también
+                    beneficiado por al aumento de ataque, por tanto, nos da un mejor resultado en el DPS.
+                </p>
+                <h3>˚₊· 𝑨𝒈𝒊𝒕𝒂𝒅𝒐𝒓 𝒅𝒆𝒍 𝑹𝒆𝒍𝒂𝒎𝒑𝒂𝒈𝒐 ·₊˚</h3>
+                <img class="me-arma-descr" src="../img/agitador-relampago.png">
+                <p>
+                    Esta arma es la segunda mejor opción para Tartaglia y no se queda muy atrás, es un arma originalmente
                 pensada para Yoimiya pero debido a que el playstyle de Yoimiya y Tartaglia son bastante similares acaba
                 siendo una muy buena opción para este último. El punto negativo de esta arma y lo que la hace quedar
                 atrás es que su aumento de DPS es únicamente para sus ataques normales, y estos solo constituyen un
                 26.9% de su DPS en una rotación. Si no fuera por esto esta arma podría ser mejor que Estrella Invernal.
+                </p>
+            </article>
+            </div>
 
-<h3>˚₊· 𝑨𝒍𝒂𝒔 𝑪𝒆𝒍𝒆𝒔𝒕𝒊𝒂𝒍𝒆𝒔 ·₊˚</h3>
-                
-                Antes se consideraba este el mejor arco de Tartaglia debido a los escases de Arcos de 5* que encajasen
-                con su playstyle, sin embargo, con la llegada de nuevos arcos han ido haciendo que tanto este arco como
-                la mayoría de armas Celestiales se vayan quedando cada vez más atrás. Este arco la verdad no tiene mucho
-                que lo haga realmente especial más que el aumento de estadísticas con su pasiva, el daño de la explosión
-                tampoco es demasiado, pero si crea una diferencia que lo pone sobre el resto. Sin embargo, si te toca
-                este arco es una muy buena opción, sigue siendo el tercer mejor arco de Tartaglia y las otras opciones
-                son mucho más difíciles de conseguir que este.
-
-<h3>˚₊· 𝑨𝒓𝒄𝒐 𝒅𝒆 𝑨𝒎𝒐𝒔 ·₊˚</h3>
-
-                Este arco no es una buena opción como arco de Tartaglia si lo comparamos con otros 5* y la dificultad
-                para conseguirlos, su pasiva no encaja con la forma en que Tartaglia se juega debido a que apenas
-                querremos usar el arco o lo haremos en contadas ocasiones. Lo que se puede destacar es que nos aumenta
-                el daño de nuestros básicos y cargados que constituyen el 52,3% del DPS de Tartaglia. Si tienes este
-                arco no dudes en usarlo sin embargo si lo que quieres es sacarlo… hay mejores opciones.
-
-
-<h3>˚₊· 𝑨𝒓𝒄𝒐 𝒅𝒆 𝒍𝒂 𝑪𝒂𝒛𝒂𝒅𝒐𝒓𝒂 𝑬𝒔𝒎𝒆𝒓𝒂𝒍𝒅𝒂 ·₊˚</h3>
-                
-                El arco del pase es sin duda uno de las mejores armas que nos ofrece, si compras el pase yo no dudaría
-                en pillar esta arma. En cuanto a su sinergia con Tartaglia esto es debido a que crea un torbellino a los
-                pies de los enemigos que los atrae tanto al centro como al suelo, y esto es la clave, los ataques
-                cargados de Tartaglia pueden hacen Knockback en enemigos y levantarlos, al hacerlo el torbellino del
-                arco los jalará hacia el suelo y hará un daño de caída bastante grande. Es una mecánica que es muy
-                explotable y si estás junto a muchos enemigos pequeños puede ser de los mejores arcos de Tartaglia. Sin
-                embargo, hay que hacer un promedio y en los cál***** solo cuento un poco del daño de caída para ser más
-                justos, añadiendo a enemigos grandes no les afecta esta mecánica, por lo que quedaría como el mejor Arco
-                4* de Tartaglia, pero muy ligeramente peor que los arcos de 5*.
-</p>
-
-</article>
-
-<article class="me-article">
-                Tartaglia podría ser considerado un personaje relativamente fácil de armar, dado que dispone de hasta 4
-                opciones en sets de artefactos cuya diferencia de daño entre sí es bastante leve. 4p de 𝐂𝐨𝐫𝐚𝐳𝐨𝐧
-                𝐝𝐞 𝐥𝐚𝐬 𝐩𝐫𝐨𝐟𝐮𝐧𝐝𝐢𝐝𝐚𝐝𝐞𝐬 es, sin dudas, su mejor set. El +15% de bonus de Daño Hydro
-                siempre viene bien, pero es que sus 4p le van como anillo al dedo a Tartaglia por el modo de juego que
-                intentaremos tener con él, ya que después de lanzar su elemental estaremos un rato haciendo uso de daños
-                normales y cargados. La duración de este buffo (15s) también viene muy bien con Tartaglia, ya que
-                intentaremos no pasar tanto tiempo en campo con él para no extender mucho su TdE.
-
-                Por otro lado, tenemos 2p de 𝐂𝐨𝐫𝐚𝐳𝐨𝐧 de las profundidades y 2p de 𝐆𝐥𝐚𝐝𝐢𝐚𝐝𝐨𝐫 o
-                𝐑𝐞𝐦𝐢𝐧𝐢𝐬𝐜𝐞𝐧𝐜𝐢𝐚 (ya que ambos tienen el mismo efecto) y como última pero no una mala opción
-                4p de 𝐑𝐞𝐦𝐢𝐧𝐢𝐬𝐜𝐞𝐧𝐜𝐢𝐚. Lo único, es que para sacarle el máximo provecho a este set tendremos
-                que sacrificar el daño del Vaporizado que realiza Tartaglia al pyronado de Xiangling al empezar la
-                rotación, ya que tendremos que utilizar nuestra definitiva al final. Una opción un poco menos viable es
-                2p de 𝐂𝐨𝐫𝐚𝐳𝐨𝐧 + 2p de 𝐍𝐨𝐛𝐥𝐞𝐳𝐚, pero SÓLO haremos uso de esto en composiciones en las que
-                queramos llevar a Tartaglia como nuker.
-</article>
-<article class="me-article">
-                Las 𝘀𝘁𝗮𝘁𝘀 𝗽𝗿𝗶𝗻𝗰𝗶𝗽𝗮𝗹𝗲𝘀 a buscar son:
-
-
-
-
-                ⌛ Reloj de ATQ%
-
-                🍷 Copa de Bonus de Daño hydro.
-
-                👑 Corona de Daño/Prob crit.
-
-
-
-
-                ➺ Con la corona vamos a intentar llegar a un 1:2, es decir, MÍNIMO un 50% de prob crit y 100% de daño
-                crit.
-
-
-
-                Las 𝘀𝘂𝗯𝘀𝘁𝗮𝘁𝘀 a buscar son:
-
-
-
-                Crit > ATQ% > Maestría Elemental = Recarga de energía.
-
-
-</article>
         </main>
         <nav class="me-sidebar">
             <div id="side-item-element"></div>
